add upgrade command

--- a/boilerplate/ignite.json.ejs
+++ b/boilerplate/ignite.json.ejs
@@ -1,4 +1,5 @@
 {
+  "name": "<%= props.name %>",
   "createdWith": "<%= props.igniteVersion %>",
   "examples": "classic",
   "jhipsterDirectory": "../",
@@ -8,6 +9,7 @@
   "socialLogin": <%= props.socialLogin %>,
   "askToOverwrite": true,
   "generators": {
-    "entity": "ignite-jhipster"
+    "entity": "ignite-jhipster",
+    "upgrade": "ignite-jhipster"
   }
 }
