refactor generation prompts
ask for a jhipster directory instead of individual options
add jh-dir flag
remove templateProps variable in favor of a single props variable
polish prompts export and import

--- a/boilerplate/ignite.json.ejs
+++ b/boilerplate/ignite.json.ejs
@@ -2,7 +2,7 @@
   "name": "<%= props.name %>",
   "createdWith": "<%= props.igniteVersion %>",
   "examples": "classic",
-  "jhipsterDirectory": "../",
+  "jhipsterDirectory": "<%= props.jhipsterDirectory %>",
   "authType": "<%= props.authType %>",
   "searchEngine": <%= props.searchEngine %>,
   "websockets": <%= props.websockets %>,
