improve upgrade command
only install libraries on initial generation
only append to files on initial generation
set up jhipster vars

--- a/boilerplate/ignite.json.ejs
+++ b/boilerplate/ignite.json.ejs
@@ -10,6 +10,13 @@
   "askToOverwrite": true,
   "generators": {
     "entity": "ignite-jhipster",
-    "upgrade": "ignite-jhipster"
+    "upgrade": "ignite-jhipster",
+    "component": "ignite-ir-boilerplate",
+    "container": "ignite-ir-boilerplate",
+    "listview": "ignite-ir-boilerplate",
+    "list": "ignite-ir-boilerplate",
+    "redux": "ignite-ir-boilerplate",
+    "saga": "ignite-ir-boilerplate",
+    "screen": "ignite-ir-boilerplate"
   }
 }
