--- a/boilerplate/App/Sagas/index.js.ejs
+++ b/boilerplate/App/Sagas/index.js.ejs
@@ -15,7 +15,7 @@ import { AccountTypes } from '../Redux/AccountRedux'
 /* ------------- Sagas ------------- */
 
 import { startup } from './StartupSagas'
-import { login, logout<% if (props.socialLogin) { %>, socialLogin<% } %><% if (props.authType === 'jwt' || props.authType === 'oauth2') { %>, loginLoad<% } %><% if (props.authType === 'oauth2') { %>, loginRefresh<% } %> } from './LoginSagas'
+import { login, logout<% if (props.socialLogin) { %>, socialLogin<% } %><% if (props.authType === 'jwt' || props.authType === 'oauth2') { %>, loginLoad<% } %> } from './LoginSagas'
 import { register } from './RegisterSagas'
 import { forgotPassword, changePassword } from './PasswordSagas'
 import { getAccount, updateAccount } from './AccountSagas'
@@ -37,9 +37,6 @@ export default function * root () {
     // JHipster accounts
     <%_ if (props.authType === 'jwt' || props.authType === 'oauth2') { _%>
     takeLatest(LoginTypes.LOGIN_LOAD, loginLoad, api),
-    <%_ } _%>
-    <%_ if (props.authType === 'oauth2') { _%>
-    takeLatest(LoginTypes.LOGIN_REFRESH, loginRefresh, api),
     <%_ } _%>
     takeLatest(LoginTypes.LOGIN_REQUEST, login, api),
     <%_ if (props.socialLogin) { _%>
