fix session login issue, remove oauth2 file in non oauth2 projects

--- a/boilerplate/App/Sagas/LoginSagas.js.ejs
+++ b/boilerplate/App/Sagas/LoginSagas.js.ejs
@@ -63,7 +63,7 @@ export function * login (api) {
   }
 }
 
-<%_ } else if (props.authType === 'jwt' || props.authType === 'uaa') { _%>
+<%_ } else { _%>
 export function * login (api, { username, password }) {
   <%_ if (props.authType === 'session') { _%>
   const authObj = 'j_username=' + username + '&j_password=' + password + '&remember-me=true'
