--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -1,9 +1,9 @@
 {
   "version": "0.0.1",
   "scripts": {
-    "clean": "rm -rf $TMPDIR/react-* && watchman watch-del-all && npm cache clean --force",
+    "clean": "rimraf $TMPDIR/react-* && watchman watch-del-all && npm cache clean --force",
     "clean:android": "cd android/ && ./gradlew clean && cd .. && react-native run-android",
-    "newclear": "rm -rf $TMPDIR/react-* && watchman watch-del-all && rm -rf ios/build && rm -rf node_modules/ && npm cache clean --force && npm i",
+    "newclear": "rimraf $TMPDIR/react-* && watchman watch-del-all && rimraf ios/build && rimraf node_modules/ && npm cache clean --force && npm i",
     "test:watch": "jest --watch",
     "updateSnapshot": "jest --updateSnapshot",
     "coverage": "jest --coverage && open coverage/lcov-report/index.html || xdg-open coverage/lcov-report/index.html",
@@ -13,7 +13,7 @@
     "android:devices": "$ANDROID_HOME/platform-tools/adb devices",
     "android:logcat": "$ANDROID_HOME/platform-tools/adb logcat *:S ReactNative:V ReactNativeJS:V",
     "android:shake": "$ANDROID_HOME/platform-tools/adb devices | grep '\\t' | awk '{print $1}' | sed 's/\\s//g' | xargs -I {} $ANDROID_HOME/platform-tools/adb -s {} shell input keyevent 82",
-    "postinstall": "rm -f ./node_modules/react-native/local-cli/core/__fixtures__/files/package.json # workaround for RN v0.52.0",
+    "postinstall": "rimraf ./node_modules/react-native/local-cli/core/__fixtures__/files/package.json # workaround for RN v0.52.0",
     "precommit": "npm run git-hook",
     "prepush": "npm run git-hook",
     "git-hook": "npm test -s",
@@ -56,7 +56,8 @@
     "react-test-renderer": "16.0.0",
     "reactotron-react-native": "1.13.2",
     "reactotron-redux": "1.13.0",
-    "reactotron-redux-saga": "1.13.0"
+    "reactotron-redux-saga": "1.13.0",
+    "rimraf": "2.6.2"
   },
   "jest": {
     "testMatch": [
