add import-jdl subgenerator
Fix #31

--- a/boilerplate/ignite.json.ejs
+++ b/boilerplate/ignite.json.ejs
@@ -18,5 +18,6 @@
     "redux": "ignite-ir-boilerplate",
     "saga": "ignite-ir-boilerplate",
     "screen": "ignite-ir-boilerplate"
+    "import-jdl": "ignite-jhipster",
   }
 }
