--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -20,41 +20,41 @@
     "storybook": "storybook start -p 7007"
   },
   "dependencies": {
-    "apisauce": "0.14.2",
+    "apisauce": "0.14.3",
     "format-json": "1.0.3",
     "identity-obj-proxy": "3.0.0",
-    "lodash": "4.17.4",
-    "prop-types": "15.6.0",
+    "lodash": "4.17.5",
+    "prop-types": "15.6.1",
     "querystringify": "1.0.0",
     "ramda": "0.25.0",
-    "react-native-config": "0.10.0",
-    "react-native-keyboard-aware-scroll-view": "0.4.1",
-    "react-native-router-flux": "4.0.0-beta.27",
-    "react-redux": "5.0.6",
+    "react-native-config": "0.11.5",
+    "react-native-keyboard-aware-scroll-view": "0.4.4",
+    "react-native-router-flux": "4.0.0-beta.28",
+    "react-redux": "5.0.7",
     "redux": "3.7.2",
-    "redux-persist": "5.4.0",
+    "redux-persist": "5.9.1",
     "redux-saga": "0.16.0",
     "reduxsauce": "0.7.0",
-    "seamless-immutable": "7.1.2",
+    "seamless-immutable": "7.1.3",
     "tcomb-form-native": "0.6.11"
   },
   "devDependencies": {
-    "@storybook/addons": "3.2.16",
-    "@storybook/addon-storyshots": "3.2.16",
-    "@storybook/channels": "3.2.16",
-    "@storybook/react-native": "3.2.16",
+    "@storybook/addons": "3.3.15",
+    "@storybook/addon-storyshots": "3.3.15",
+    "@storybook/channels": "3.3.15",
+    "@storybook/react-native": "3.3.15",
     "babel-core": "6.26.0",
     "babel-plugin-ignite-ignore-reactotron": "0.3.0",
     "babel-preset-env": "1.6.1",
-    "babel-preset-react-native": "3.0.2",
-    "buffer": "5.0.8",
-    "enzyme": "3.2.0",
-    "enzyme-adapter-react-16": "1.1.0",
-    "jest": "21.2.1",
+    "babel-preset-react-native": "4.0.0",
+    "buffer": "5.1.0",
+    "enzyme": "3.3.0",
+    "enzyme-adapter-react-16": "1.1.1",
+    "jest": "22.4.2",
     "mockery": "2.1.0",
-    "react-dom": "16.0.0",
-    "react-test-renderer": "16.0.0",
-    "reactotron-react-native": "1.13.2",
+    "react-dom": "16.3.0-alpha.1",
+    "react-test-renderer": "16.3.0-alpha.1",
+    "reactotron-react-native": "1.14.0",
     "reactotron-redux": "1.13.0",
     "reactotron-redux-saga": "1.13.0",
     "rimraf": "2.6.2"
