specify default of empty String so tests don't fail on missing property
related to oktadeveloper/generator-jhipster-ionic#33

--- a/templates/jhipster/oauth2/AuthInfoResource.java.ejs
+++ b/templates/jhipster/oauth2/AuthInfoResource.java.ejs
@@ -30,11 +30,11 @@ import org.springframework.web.bind.annotation.RestController;
 @RequestMapping("/api")
 public class AuthInfoResource {
 
-    @Value("${security.oauth2.client.access-token-uri}")
+    @Value("${security.oauth2.client.access-token-uri:}")
     private String accessTokenUri;
-    @Value("${security.oauth2.client.client-id}")
+    @Value("${security.oauth2.client.client-id:}")
     private String clientId;
-    @Value("${security.oauth2.client.scope}")
+    @Value("${security.oauth2.client.scope:}")
     private String scope;
 
     @GetMapping("/auth-info")
