use POST for creating entities, PUT for updating
related to #40

--- a/templates/saga.ejs
+++ b/templates/saga.ejs
@@ -33,7 +33,7 @@ export function * get<%= props.pluralName %> (api, action) {
 export function * update<%= props.name %> (api, action) {
   const { <%= camelCase(props.name) %> } = action
   // make the call to the api
-  const apiCall = call(api.update<%= props.name %>, <%= camelCase(props.name) %>)
+  const apiCall = call(!!<%= camelCase(props.name) %>.id ? api.update<%= props.name %> : api.create<%= props.name %>, <%= camelCase(props.name) %>)
   const response = yield call(callApi, apiCall)
 
   // success?
