--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -89,13 +89,13 @@
     ],
     "testPathIgnorePatterns":[
       "/node_modules/",
-      "Tests/Setup.js"
+      "test/setup.js"
     ],
     "moduleNameMapper": {
       "^.+\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "identity-obj-proxy"
     },
     "setupFiles": [
-      "./Tests/Setup"
+      "./test/setup"
     ],
     "transform": {
       "^.+\\.js$": "<rootDir>/node_modules/react-native/jest/preprocessor.js"
@@ -104,8 +104,8 @@
       "node_modules/(?!react-native|tcomb-form-native)"
     ],
     "coveragePathIgnorePatterns": [
-      "App/Services/Api.js",
-      "App/Themes/",
+      "app/shared/services/api.js",
+      "app/shared/themes/",
       "/storybook/",
       "/*\\.story\\.js"
     ],
