--- a/templates/entity/entity-flatlist.js.ejs
+++ b/templates/entity/entity-flatlist.js.ejs
@@ -1,20 +1,16 @@
 import React from 'react'
 import { FlatList, Text, TouchableOpacity, View } from 'react-native'
 import { connect } from 'react-redux'
-import <%= props.name %>Actions from '../Redux/<%= props.name %>Redux'
 import { Navigation } from 'react-native-navigation'
-import { <%= camelCase(props.name) %>EntityDetailScreen, <%= camelCase(props.name) %>EntityEditScreen } from '../Navigation/Layouts'
+import { <%= camelCase(props.name) %>EntityDetailScreen, <%= camelCase(props.name) %>EntityEditScreen } from '../../../navigation/layouts'
 <%_ if (props.searchEngine) { _%>
-import SearchBar from '../Components/SearchBar'
+import SearchBar from '../../../shared/components/search-bar/search-bar'
 <%_ } _%>
-
-// For empty lists
-import AlertMessage from '../Components/AlertMessage'
+import <%= props.name %>Actions from './<%= props.kebabName %>.reducer'
+import styles from './<%= props.kebabName %>-entity-screen-style'
+import AlertMessage from '../../../shared/components/alert-message/alert-message'
 
 // More info here: https://facebook.github.io/react-native/docs/flatlist.html
-
-// Styles
-import styles from './Styles/<%= props.name %>EntityScreenStyle'
 
 class <%= props.name %>EntityScreen extends React.PureComponent {
   constructor (props) {
