--- a/templates/entity/entity-detail-screen.js.ejs
+++ b/templates/entity/entity-detail-screen.js.ejs
@@ -1,15 +1,14 @@
 import React from 'react'
 import { Alert, ScrollView, Text } from 'react-native'
 import { connect } from 'react-redux'
-import <%= props.name %>Actions from '../Redux/<%= props.name %>Redux'
-import RoundedButton from '../Components/RoundedButton'
 import { Actions as NavigationActions } from 'react-native-router-flux'
 <%_ if (props.entityContainsLocalDate) { _%>
 import { jsDateToLocalDate } from '../Transforms/DateTransforms'
 <%_ } _%>
 
-// Styles
-import styles from './Styles/<%= props.name %>EntityDetailScreenStyle'
+import <%= props.name %>Actions from './<%= props.kebabName %>.reducer'
+import RoundedButton from '../../../shared/components/rounded-button/rounded-button'
+import styles from './<%= props.kebabName %>-entity-detail-screen-style'
 
 class <%= props.name %>EntityDetailScreen extends React.Component {
   constructor (context, props) {
